syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option objc_class_prefix = "HLW";

package controlcommunication;

service ControlCommunication {
  rpc AdvertiseToController(ConnectionConfigs) returns (google.protobuf.Empty) {}
  rpc StartMicroservice(MicroserviceConfig) returns (google.protobuf.Empty) {}
  rpc StopMicroservice(MicroserviceName) returns (google.protobuf.Empty) {}
  rpc SendLightMetrics(LightMetricsList) returns (google.protobuf.Empty) {}
}

message QueueSize {
  string name = 1;
  repeated int32 size = 2;
}

message ConnectionConfigs {
  string device_name = 1;
  string device_type = 2;
  string ip_address = 3;
}

message LightMetrics {
  string name = 1;
  QueueSize queue = 2;
  float request_rate = 3;
}

message LightMetricsList {
  repeated LightMetrics light_metrics = 1;
}



message MicroserviceConfig {
  string name = 1;
  string type = 2;
  string version = 3;
  int32 recv_port = 4;
  int32 dwnstr_port = 5;
  string dwnstr_ip = 6;
}

message MicroserviceName {
  string name = 1;
}